# ham

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  eigensystem.cpp  geometry.cpp  lattice.cpp  main.cpp  matrix.cpp  vec.cpp  vector.cpp
src/ham/: brillouin_zone.h  dos.h  eigensystem.h  geometry.h  lattice.h  matrix.h  tightbinding.h  types.h  vec.h  vector.h
test/: CMakeLists.txt  test-foo.cpp
